[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triansec"
version = "0.1.3"
description = "TrianSec API Security SDK"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aniket Paswan", email = "aniket@triansec.com"},
    {name = "Anjali Jha", email = "anjali@triansec.com"},
    {name = "Anshika Pratap Singh", email = "anshika@triansec.com"},
]
maintainers = [
    {name = "Aniket Paswan", email = "aniket@triansec.com"}
]
keywords = ["security", "api", "middleware", "fastapi", "protection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "starlette>=0.30.0",
    "cachetools>=5.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
fastapi = ["fastapi>=0.100.0"]

[project.urls]
Homepage = "https://triansec.com"
Documentation = "https://docs.triansec.com"
Repository = "https://github.com/triansec/triansec-sdk"
Issues = "https://github.com/triansec/triansec-sdk/issues"
Changelog = "https://github.com/triansec/triansec-sdk/blob/main/CHANGELOG.md"

# ✅ Package discovery configuration
[tool.setuptools.packages.find]
where = ["src"]
include = ["triansec*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=triansec --cov-report=html --cov-report=term"